# [[file:rename.note::*cargo][cargo:1]]
[package]
name = "irename"
version = "0.0.3"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
structopt = "0.3"
skim = "0.9"
gut = {version="0.1.7", package="gchemol-gut"}
tempfile = "3"    
promptly = "0.3"

[dev-dependencies]
# cargo:1 ends here
